--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "tsx": "^4.17.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.6.2",
     "vitest": "^3.2.0"
   },
