Refactor event sourcing types and deciders for improved clarity and functionality; update VSCode settings and dev container configurations.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
   "recommendations": [
       "effectful-tech.effect-vscode",
-      "dbaeumer.vscode-eslint"
+      "dbaeumer.vscode-eslint",
+      "mxsdev.typescript-explorer",
+      "mxsdev.typescript-explorer"
     ]
 }
